Added checklist functionality.
